--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.6.3",
+    "chart.js": "^4.4.3",
     "vue": "^3.3.11",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
