--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/drag-and-drop": "^0.1.1",
     "axios": "^1.6.3",
     "chart.js": "^4.4.3",
     "vue": "^3.3.11",
